@@ -1,3 +1,4 @@
+sfcbd.sup
 .settings
 .cdtproject
 cimXmlOps.h
